force-app/main/default/objects/Feedback_Survey__c/Feedback_Survey__c.object-meta.xml
<CustomObject>
    <description>Custom survey object created by Better Rehab to send surveys to external parties through Pendula</description>
    <label>Feedback Survey</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Feedback Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>