force-app/main/default/objects/Feedback_Survey__c/fields/Client_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Division__c</fullName>
    <formula>TEXT( Recipient__r.Client_Division__c )</formula>
    <inlineHelpText>Client Divison from Recipient field</inlineHelpText>
    <label>Client Division</label>
    <type>Text</type>
</CustomField>