force-app/main/default/objects/Feedback_Survey__c/fields/Client_Event_Relation__c.field-meta.xml
<CustomField>
    <fullName>Client_Event_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Event Relation</label>
    <referenceTo>Client_Event_Relation__c</referenceTo>
    <relationshipLabel>Feedback Surveys</relationshipLabel>
    <relationshipName>Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>