force-app/main/default/objects/Feedback_Survey__c/fields/Days_after_Event_Ends__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Event_Ends__c</fullName>
    <formula>TODAY() -  DATEVALUE(Event_End_DateTime__c)</formula>
    <label>Days after Event Ends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>