force-app/main/default/objects/Feedback_Survey__c/fields/Days_after_Survey__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Survey__c</fullName>
    <formula>TODAY() - DATEVALUE( Survey_Sent_Time__c )</formula>
    <label>Days after Survey</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>