force-app/main/default/objects/Feedback_Survey__c/fields/Detractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Detractor_Count__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Detractor 1-6&quot;, 1 , 0)</formula>
    <label>Detractor Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>