force-app/main/default/objects/Feedback_Survey__c/fields/Did_recipient_reply_STOP__c.field-meta.xml
<CustomField>
    <fullName>Did_recipient_reply_STOP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the recipient replies STOP when this survey is sent out, this will be TRUE</inlineHelpText>
    <label>Did recipient reply STOP?</label>
    <type>Checkbox</type>
</CustomField>