force-app/main/default/objects/Feedback_Survey__c/fields/Event_Region__c.field-meta.xml
<CustomField>
    <fullName>Event_Region__c</fullName>
    <formula>TEXT(  Recipient__r.enrtcr__Client_Region__c  )</formula>
    <inlineHelpText>Based on the client&apos;s region</inlineHelpText>
    <label>Event Region</label>
    <type>Text</type>
</CustomField>