force-app/main/default/objects/Feedback_Survey__c/fields/Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>Event_Subject__c</fullName>
    <inlineHelpText>If the event subject has been updated since the creation of this survey, this will not be reflected</inlineHelpText>
    <label>Event Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>