force-app/main/default/objects/Feedback_Survey__c/fields/Google_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_Link__c</fullName>
    <formula>Worker_Site__r.Google_Review_Link__c</formula>
    <inlineHelpText>Link is based on the worker site field</inlineHelpText>
    <label>Google Review Link</label>
    <type>Text</type>
</CustomField>