force-app/main/default/objects/Feedback_Survey__c/fields/Is_Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Supervisor__c</fullName>
    <formula>IF( Worker__r.Direct_Supervisor__r.enrtcr__User__c =  $User.Id, TRUE, FALSE)</formula>
    <inlineHelpText>TRUE if the currently logged in user is the worker&apos;s direct supervisor</inlineHelpText>
    <label>Is Direct Supervisor?</label>
    <type>Checkbox</type>
</CustomField>