force-app/main/default/objects/Feedback_Survey__c/fields/NPS_Description__c.field-meta.xml
<CustomField>
    <fullName>NPS_Description__c</fullName>
    <label>NPS Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detractor 1-6</fullName>
            </value>
            <value>
                <fullName>Passive 7-8</fullName>
            </value>
            <value>
                <fullName>Promoters 9-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>