force-app/main/default/objects/Feedback_Survey__c/fields/Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out__c</fullName>
    <formula>Recipient__r.Opt_out_of_Communications__c</formula>
    <inlineHelpText>TRUE if client has opted out of communications and survey will not be sent</inlineHelpText>
    <label>Opt Out</label>
    <type>Checkbox</type>
</CustomField>