force-app/main/default/objects/Feedback_Survey__c/fields/Passive_Count__c.field-meta.xml
<CustomField>
    <fullName>Passive_Count__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Passive 7-8&quot;, 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>