force-app/main/default/objects/Feedback_Survey__c/fields/Promoter_Count__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Count__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Promoters 9-10&quot;, 1, 0)</formula>
    <label>Promoter Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>