force-app/main/default/objects/Feedback_Survey__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this survey is related to an event, should be the same client as in the Client Event Relation</inlineHelpText>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedback Surveys</relationshipLabel>
    <relationshipName>Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>