force-app/main/default/objects/Feedback_Survey__c/fields/Start_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_as_Text__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(  Event_Start_DateTime__c )))+&quot;/&quot;+ (TEXT(DAY(DATEVALUE( Event_Start_DateTime__c ))))+&quot;/&quot;+ (TEXT(YEAR(DATEVALUE( Event_Start_DateTime__c ))))</formula>
    <label>Start Date as Text</label>
    <type>Text</type>
</CustomField>