force-app/main/default/objects/Feedback_Survey__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <label>Survey Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>