force-app/main/default/objects/Feedback_Survey__c/fields/Survey_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Time__c</fullName>
    <label>Survey Sent Time</label>
    <type>DateTime</type>
</CustomField>