force-app/main/default/objects/Feedback_Survey__c/fields/Worker_Site__c.field-meta.xml
<CustomField>
    <fullName>Worker_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the site based on the worker&apos;s current office at the time of this survey being sent out</inlineHelpText>
    <label>Worker Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Feedback Surveys</relationshipLabel>
    <relationshipName>Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>