force-app/main/default/objects/Feedback_Survey__c/recordTypes/Follow_Up_Client_Survey.recordType-meta.xml
<RecordType>
    <fullName>Follow_Up_Client_Survey</fullName>
    <active>true</active>
    <description>Survey for existing clients who meet the criteria for a follow-up survey</description>
    <label>Follow-up Client Survey</label>
</RecordType>