force-app/main/default/objects/Feedback_Survey__c/recordTypes/Inactive_Client_Survey.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Client_Survey</fullName>
    <active>true</active>
    <description>Survey for HST clients who are made inactive</description>
    <label>Inactive Client Survey</label>
</RecordType>