force-app/main/default/objects/Feedback_Survey__c/recordTypes/Initial_Client_Survey.recordType-meta.xml
<RecordType>
    <fullName>Initial_Client_Survey</fullName>
    <active>true</active>
    <description>Survey for events where event type is Initial Appointment</description>
    <label>Initial Client Survey</label>
</RecordType>