force-app/main/default/objects/Feedback_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Recipient__c</columns>
    <columns>Event_Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Worker__c</columns>
    <columns>Worker_Site__c</columns>
    <columns>Event_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Response__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>